syntax = "proto3";

service Hello {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}
  
message HelloRequest {
    string message = 1;
}

// The login response
message HelloReply {
    string message = 1;
}

